akvo/mediaroot/css/global.css
/* 
Akvo RSR is covered by the GNU Affero General Public License, see more details in the license.txt file located at the root folder of the Akvo RSR module. 
For additional details on the GNU license please see < http://www.gnu.org/licenses/agpl.html >.
 */

/* body-level
-------------------------------------------------------------------------------------- */

body
{
font-family: Arial, Verdana, Helvetica, Sans-serif;     
font-size: 100%;
line-height:1em;
color: #333;       
background-color: #fff;
}

/* wrapper-level
-------------------------------------------------------------------------------------- */

#wrapper
{ 
width: 980px;
font-size: 0.75em;
margin: 0 auto;
padding: 0 20px;
}

/* structural-float-level
-------------------------------------------------------------------------------------- */

#header
{
text-align: right;
vertical-align: middle;
min-height: 55px;
line-height: 1em;
margin: 10px 0 15px 5px;
position: relative;
}

#navigation
{
padding-bottom: 10px;
}

#breadcrumbs
{
padding: 5px 20px;
}

#content
{
margin-top: 10px;
margin-bottom: 10px;
}

#footer
{
clear: both;
color: #666;
margin-bottom: 10px;
border-top: 1px solid #ccc;
padding-top: 10px;
}

/* header
-------------------------------------------------------------------------------------- */

#header
{
height: 70px;
}

#header_logo 
{
position: absolute;
top: 0;
left: 0;
}

#header div.right
{
float: right;
}

#header_button
{
position: absolute;
top:1.5em;
right: 0;
}

#header_logged_text
{
width: 200px;
position: absolute;
top: 1.2em;
right: 100px;
}

/* global-navigation
-------------------------------------------------------------------------------------- */

#navigation ul
{
color: #fff;
float: left;
width: 100%;
background-color: #dbdbdb;
font-family: arial, helvetica, sans-serif;
border-bottom: 2px solid #999;
padding: 0;
margin: 0;
}

#navigation ul li
{
display: inline;
}

#navigation ul li a
{
padding: 0.5em 1.2em;
color: #333;
text-decoration: none;
float: left;
line-height: 1.5em;
border-right: 1px solid #fff;
font-weight: bold;
}

#navigation ul li a:hover
{
background-color: #ccc;
}

#navigation ul li a.active
{ 
background-color: #666;
color: #ededed;
}

/* Links
-------------------------------------------------------------------------------------- */

a, a:link, a:visited, a:active
{
color: #1D7FC6;
text-decoration: none;
cursor: pointer;
}

/* Form elements
-------------------------------------------------------------------------------------- */

.form {
margin: 0 20px;
}

.form label {
padding: 10px 50px 20px 50px;
font-weight: bold;
font-size: 1.2em;
}

.input {
font-size: 0.85em; 
height: 1.2em;
padding: 0.2em 0.3em; 
font-family: Verdana, Arial, Helvetica, sans-serif; 
background-color: #fff; 
color: #333;
border: 1px solid #999;
margin: 10px 0;
vertical-align:top;
display: block;
}

.form .input, .form .textfield, .form .select {
margin: 20px 100px 5px 100px;
}

h2.paddedbottom {
padding: 20px 20px 20px 20px;
}

body p.block
{
padding: 0 0 5px 0;
margin: 0;
}

.form_error {
float: right;
width: 250px;
background-color: #FFEBE7;
border: 1px solid #FFCDD1;
padding: 20px 0;
color: red;
margin-right: 50px;
}

.form_error p {
margin: 0;
}

.textarea {
font-size: 0.85em; 
padding: 0.1em 0.3em; 
font-family: Verdana, Arial, Helvetica, sans-serif; 
background-color: #fff; 
color: #333;
border: 1px solid #999;
margin: 0 0 10px 0;
vertical-align:top; 
padding-top: 3px;
display: block;
}

.input:focus {
background-color: blue;
}

.input:focus, .textarea:focus
{
background-color: #F0FFE6;
}

.signin_field
{
width: 130px;
display: inline;
margin: 1em 2em;
}

.radio {
margin-left: 15px;
margin-right: 15px;
}

/* box-elements
-------------------------------------------------------------------------------------- */

.boxhead
{
padding: 5px 0 5px 0;
background-color: #dedede;
}

.boxbody
{
background-color: #fff;
border: 1px solid #dedede;
border-bottom: 2px solid #c1c1c1;
margin-bottom: 20px;
padding: 20px 0;
}

.boxhead p
{
padding: 0 20px 5px 20px;
}

.boxbody p
{
padding: 0 20px 5px 20px;
}

.boxbody img.photo
{
padding: 0 20px;
}

/* elements
-------------------------------------------------------------------------------------- */

hr
{
margin: 10px 20px;
height: 0;
border: 0;
border-top: 1px solid #ccc;
}

.status {
padding: 0 10px 10px 10px;
}

.members-photo {
float:left;
width: 90px;
margin: 3px 10px 10px 10px;
}

.small {
font-size: 85%;
line-height: 1.1em;
}

.lightx1 {
color: #666;
}

.lightx2 {
color: #999;
}

.indentx1 {
margin-left: 20px;
}

.indentx2 {
margin-left: 35px;
}

.indentx3 {
margin-left: 100px;
}

.spaced {
margin: 10px 0;
}

.rss {
background: url('../img/rss.gif') no-repeat right 0.1em;
padding-right: 1.6em;
margin: 20px;
}

/* Sliding elements
-------------------------------------------------------------------------------------- */

#panel {
display: none;
background-color: #FEFFCD;
padding: 10px;
margin: -20px 0 20px 0
}

/* Tables
-------------------------------------------------------------------------------------- */

table
{
margin: 0 20px;
border-collapse:collapse;
}

table td
{
vertical-align: top;
padding: 2px 15px 2px 0;
}

table#login
{
vertical-align: middle;
width: 100%;
}

table#login td
{
background-color: red;
}

table td.padded
{
padding: 0 10px 0 0;
}

.l33, .r33 {width: 33%;}
.c33 {width: 34%;}


.l33, .c33
{
border-right: 1px solid #ccc;
}

table#project_showcase td
{
padding: 0 20px;
vertical-align: top;
}

table#project_showcase td p
{
margin: 0 0 5px 0;
padding: 0;
}

table#project_table
{
border-top: 1px solid #999;
margin: 0 0;
width: 100%;
}

table#project_table th
{
padding: 10px;
background-color: #ccc;
text-align: center;
border-right: 1px solid #999;
}

table#project_table td
{
padding: 10px;
border-right: 1px solid #ccc;
border-top: 1px solid #ccc;
vertical-align: top;
}

table#login td
{
padding: 10px 0;
}

/* Lists
-------------------------------------------------------------------------------------- */

.node ol
{
margin: 1em 0 1em 20px;
padding: 0 20px;
list-style-type: decimal;
}

.node ol li
{
padding-left: 1em;
}

ul.simplelist
{
padding: 20px;
margin: 0;
list-style-type: none;
}

ul.indented
{
padding: 0 20px;
margin: 0;
list-style-type: none;
}

.node ul
{
padding: 0 20px;
margin: 0;
list-style-type: none;
}

.node ul li, ul.item-list li, ul.indented li, ul.simplelist li
{
background-image: url('../img/arrow.png');
background-repeat: no-repeat;
background-position: 0 .2em;
padding-left: 1.2em;
padding-bottom: 0.5em;
}

/* button (styled links)
-------------------------------------------------------------------------------------- 
Credit to http://www.oscaralexander.com/tutorials/how-to-make-sexy-buttons-with-css.html
*/

button
{
margin: 0;
padding: 0;
border: 0;
}

.clear { /* generic container (i.e. div) for floating buttons */
    overflow: hidden;
    width: 100%;
}

a.actionbutton {
    float: right;
    color: #444;
    display: block;
    font: normal 12px arial, sans-serif;
    height: 24px;
    margin-top: 0.6em;
    margin-right: 6px;
    padding-right: 18px; /* sliding doors padding */
    text-decoration: none;
}

a.actionbutton span {
    display: block;
    line-height: 14px;
    padding: 5px 0 5px 18px;
}

a.actionbutton:active {
    background-position: bottom right;
    color: #000;
    outline: none; /* hide dotted outline in Firefox */
}

a.actionbutton:active span {
    background-position: bottom left;
    padding: 6px 0 4px 18px; /* push text down 1px */
}

.ab_white 
{	background: transparent url('../img/bg_button_a_white.png') no-repeat scroll top right;}
.ab_white span
{	background: transparent url('../img/bg_button_span_white.png') no-repeat;}
.ab_grey 
{	background: transparent url('../img/bg_button_a_grey.png') no-repeat scroll top right;}
.ab_grey span
{	background: transparent url('../img/bg_button_span_grey.png') no-repeat;}
.ab_d0ffff 
{	background: transparent url('../img/bg_button_a_d0ffff.png') no-repeat scroll top right;}
.ab_d0ffff span
{	background: transparent url('../img/bg_button_span_d0ffff.png') no-repeat;}

/*
.ab_white 
{	background: transparent url('/rsr/media/img/bg_button_a_white.png') no-repeat scroll top right;}
.ab_white span
{	background: transparent url('/rsr/media/img/bg_button_span_white.png') no-repeat;}
.ab_grey 
{	background: transparent url('/rsr/media/img/bg_button_a_grey.png') no-repeat scroll top right;}
.ab_grey span
{	background: transparent url('/rsr/media/img/bg_button_span_grey.png') no-repeat;}
.ab_d0ffff 
{	background: transparent url('/rsr/media/img/bg_button_a_d0ffff.png') no-repeat scroll top right;}
.ab_d0ffff span
{	background: transparent url('/rsr/media/img/bg_button_span_d0ffff.png') no-repeat;}
*/

.bold { font-weight: bold; }
.bold td { font-weight: bold; }
.bold td { padding-top: 5px; }
.hr td { border-bottom: 1px solid #ccc; padding-bottom: 10px; }
th { font-weight: bold; }

/* IE-disaster prevention unit (IE-DPU)
-------------------------------------------------------------------------------------- */

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.clearfix {display:inline-block;}
/* Hide from IE Mac \*/
.clearfix {display:block;}
/* End hide from IE Mac */

/* Sponsor partner */
.index_sponsor_box {
    /*
    background: transparent url('../img/index_sponsor_background.png') repeat-x;
    padding:0;
    margin-bottom:20px;
    height:93px;
    overflow:hidden;
    */
}

.index_sponsor_box a {
    font-size:0.9em;
}

#le_sponser_box{
    float:left; 
    width:345px;
}

.index_sponsor_box_left {
    float:left; 
    width:90px;
    /*background: transparent url('../img/liveearth_water_logo_small.gif') no-repeat 20px 10px; */
    /*padding-left:170px;*/
    /*
    float:left;
    width:220px;
    padding-left:30px;
    */
}

.index_sponsor_box_right {
    float:left;
}

.index_sponsor_box_right h1 {
    font-size:1.2em;
    font-weight:bold;
    margin:0px;
    color:#DE481C;
    margin-bottom:15px;
}

.index_sponsor_box ul {
    list-style-type: disc;
    list-style-position: inside;
    margin-bottom:10px;
    color:#1263A7;
}

.index_sponsor_box ul li{
    margin-left:0px;
    margin-bottom:1px;
}

#sponsor_box_right {
    width:300px;
    float:right;
    /*height:90px;
    overflow:hidden;*/
}

#sponsor_box_right h2 {
    font-size:1.1em;
    padding-left:0;
    padding-top:0px;
    margin-top:10px;
}

